# genai-agents-foundations

./: .gitignore  README.md  build_and_run.ps1  build_and_run.sh  create_genai_repo.sh
datasets/: README.md
java/: pom.xml
java/src/main/java/: module-info.java
java/src/main/java/com/jana/bank/: Main.java
java/src/main/java/com/jana/bank/payments/: Emi.java
java/src/main/java/com/jana/bank/risk/: RiskScore.java
java/src/test/java/com/jana/bank/payments/: EmiTest.java
java/src/test/java/com/jana/bank/risk/: RiskScoreTest.java
javascript/: package.json
javascript/playwright/: example.spec.js  playwright.config.js
javascript/src/: index.js
javascript/src/payments/: emi.js  fx.js
javascript/src/risk/: score.js
javascript/test/: emi.test.js  score.test.js
python/: README.md  pyproject.toml
python/src/bank/: __init__.py
python/src/bank/payments/: __init__.py  emi.py  fx.py
python/src/bank/risk/: __init__.py  score.py
python/tests/: test_emi.py  test_risk.py
