[build-system]
requires = ["setuptools>=66", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank"
version = "0.1.0"
description = "Banking utilities for learning modules/imports"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
